# ToyRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  DXC 1.6 help.txt  DXC help.txt  README.md  ShadersToCompile.txt  TODO.txt  cmake compile.bat  compileallshaders.bat  full repo reset.bat  generateproject.bat  generateprojects - clang.bat  generateprojects.bat  git pull.bat  gltfpack args.txt  gltfpack.bat
.github/workflows/: build.yml
resources/: cornell.gltf
source/: AdaptLuminanceRenderer.cpp  AftermathCrashDump.cpp  AftermathCrashDump.h  Allocators.cpp  Allocators.h  AmbientOcclusionRenderer.cpp  BasePassRenderers.cpp  BloomRenderer.cpp  Callstack.cpp  Callstack.h  CircularBuffer.h  CommonResources.cpp  CommonResources.h  ConcurrentRingBuffer.h  CriticalSection.h  DebugDrawRenderer.cpp  DeferredLightingRenderer.cpp  DescriptorTableManager.cpp  DescriptorTableManager.h  Engine.cpp  Engine.h  FFXHelpers.cpp  FFXHelpers.h  GIRenderer.cpp  GPUCulling.cpp  GPUCulling.h  Graphic.cpp  Graphic.h  GraphicConstants.h  GraphicHelpers.cpp  GraphicPropertyGrid.cpp  GraphicPropertyGrid.h  GraphicRHI.cpp  GraphicRHI.h  ImguiManager.cpp  ImguiManager.h  ImguiRenderer.cpp  ImportanceSamplingRenderer.cpp  Keyboard.h  LibraryImplementations.cpp  (+41 more)
source/shaders/: DDGIShaderConfig.h  RtxdiApplicationBridge.hlsli  RtxdiShaderInterop.h  ShaderInterop.h  ShaderInteropTypes.h  adaptluminance.hlsl  ambientocclusion.hlsl  basepass.hlsl  bloom.hlsl  common.h  common.hlsli  culling.hlsli  debugdraw.hlsl  deferredlighting.hlsl  fastmath.hlsli  fullscreen.hlsl  giprobeextrareduction.hlsl  giprobetrace.hlsl  giprobevisualization.hlsl  gpuculling.hlsl  hzb.h  hzb.hlsli  imgui.hlsl  lightingcommon.h  lightingcommon.hlsli  minmaxdownsample.hlsl  packunpack.hlsli  postprocess.hlsl  random.hlsli  raytracingcommon.hlsli  restirshading.hlsl  shaderstocompile.txt  shadowfiltering.hlsl  shadowmask.hlsl  sky.hlsl  tilerenderingutils.hlsl  toyrenderer_common.hlsli  updateinstanceconsts.hlsl  visualizeminmip.hlsl
source/shaders/shared/: AdaptLuminanceStructs.h  AmbientOcclusionStructs.h  BasePassStructs.h  BloomStructs.h  CommonConsts.h  DeferredLightingStructs.h  GPUCullingStructs.h  IndirectArguments.h  MaterialData.h  MeshData.h  MinMaxDownsampleStructs.h  PostProcessStructs.h  RawVertexFormat.h  ShaderInterop.h  ShadowMaskStructs.h  SkyStructs.h  StructsCommon.h  TileRenderingStructs.h  UpdateNodeTransformsStructs.h
